--- a/package.json
+++ b/package.json
@@ -15,17 +15,30 @@
   "dependencies": {
     "@material-ui/core": "^4.0.2",
     "@material-ui/icons": "^4.0.1",
+    "@svgr/webpack": "^4.3.0",
+    "@types/classnames": "^2.2.8",
+    "@types/d3-dsv": "^1.0.36",
+    "@types/lodash-es": "^4.17.3",
+    "@types/react": "^16.8.19",
+    "@types/react-dom": "^16.8.4",
     "classnames": "^2.2.6",
     "d3-dsv": "^1.1.1",
     "gatsby": "^2.8.6",
+    "gatsby-plugin-sass": "^2.0.11",
+    "gatsby-plugin-svgr": "^2.0.2",
     "gatsby-plugin-typescript": "^2.0.15",
     "gatsby-source-wordpress": "^3.0.64",
     "lodash-es": "^4.17.11",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
+    "@testing-library/react": "^8.0.1",
+    "@types/jest": "^24.0.13",
     "dotenv": "^8.0.0",
+    "jest": "^24.8.0",
+    "jest-dom": "^3.5.0",
     "prettier": "^1.18.0"
   },
   "repository": {
