--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "jsx": "preserve",
     "paths": {
       "@Components/*": ["./components/*"],
-      "@Vectors/*": ["../public/static/vectors/*"]
+      "@Vectors/*": ["../static/vectors/*"]
     }
   },
   "include": ["./src"]
