--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "classnames": "^2.2.6",
     "d3-dsv": "^1.1.1",
     "gatsby": "^2.8.6",
+    "gatsby-plugin-layout": "^1.0.15",
+    "gatsby-plugin-material-ui": "^2.0.1",
+    "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-remove-trailing-slashes": "^2.0.11",
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-svgr": "^2.0.2",
     "gatsby-plugin-typescript": "^2.0.15",
@@ -31,7 +35,8 @@
     "lodash-es": "^4.17.11",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1"
   },
   "devDependencies": {
     "@testing-library/react": "^8.0.1",
