--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-svgr": "^2.0.2",
     "gatsby-plugin-typescript": "^2.0.15",
+    "gatsby-source-filesystem": "^2.0.39",
     "gatsby-source-wordpress": "^3.0.64",
+    "gatsby-transformer-json": "^2.1.11",
     "lodash-es": "^4.17.11",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
