--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "gatsby-plugin-layout": "^1.0.15",
     "gatsby-plugin-material-ui": "^2.0.1",
     "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-remove-trailing-slashes": "^2.0.11",
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-svgr": "^2.0.2",
     "gatsby-plugin-typescript": "^2.0.15",
@@ -38,7 +37,8 @@
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "sanitize-html": "^1.20.1"
   },
   "devDependencies": {
     "@testing-library/react": "^8.0.1",
