--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@testing-library/react": "^8.0.1",
     "@types/jest": "^24.0.13",
+    "@types/react-helmet": "^5.0.8",
     "dotenv": "^8.0.0",
     "jest": "^24.8.0",
     "jest-dom": "^3.5.0",
