--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "classnames": "^2.2.6",
     "d3-dsv": "^1.1.1",
     "gatsby": "^2.8.6",
+    "gatsby-plugin-google-analytics": "^2.0.21",
     "gatsby-plugin-layout": "^1.0.15",
     "gatsby-plugin-material-ui": "^2.0.1",
     "gatsby-plugin-react-helmet": "^3.0.12",
