--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "megeto1",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "Template for a school website with Gatsby and WordPress",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
