Update default settings left from gatsby's package.json

--- a/package.json
+++ b/package.json
@@ -2,15 +2,14 @@
   "name": "megeto1",
   "private": true,
   "description": "Template for a school website with Gatsby and WordPress",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
-    "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+    "serve": "gatsby serve"
   },
   "dependencies": {
     "@material-ui/core": "^4.0.2",
@@ -52,9 +51,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "git+https://github.com/kayKayEhnn/typescript-react-redux-boilerplate.git"
   }
 }
