--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "megeto1",
+  "name": "megeto",
   "private": true,
   "description": "Template for a school website with Gatsby and WordPress",
   "version": "1.0.0",
